[DOC] article2: added shadow contours consistency section
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -83,7 +83,7 @@ $L_{\infty}$ за линейное время, без использования
  называется
  $h_{K}: \mathbb{R}^{n} \to \mathbb{R}_{+}$:
 
- \begin{equation*}h_{K}(u) = \sup \limits_{x \in K}(x, u)\end{equation*}
+ \begin{equation*}h_{K}(u) = \sup \limits_{x \in K}(x, u).\end{equation*}
 \end{SmartDefinition}
 
 В ряде практических задач, возникающих в компьютерной томографии
@@ -110,7 +110,7 @@ $u_{1}, u_{2}, \ldots, u_{m}$.
  Опорные числа $h_{1}, h_{2}, \ldots, h_{m}$ по направлениям \\
  $u_{1}, u_{2}, \ldots, u_{m}$ называются \textbf{согласованными}, если
  существует такое выпуклое тело  $K^{*} \subset \mathbb{R}^{n}$, что
- $h_{K^{*}}(u_{i}) = h_{i}$
+ $h_{K^{*}}(u_{i}) = h_{i}$.
 \end{SmartDefinition}
 
 Таким образом, поскольку не всякий набор действительных чисел является
@@ -121,7 +121,7 @@ $u_{1}, u_{2}, \ldots, u_{m}$ строится такой согласованн
 $h^{*}_{1}, h^{*}_{2}, \ldots, h^{*}_{m}$, который реализует минимум функционала
 
 \begin{equation*}
- I = || h - h^{0} ||_{X}
+ I = || h - h^{0} ||_{X},
 \end{equation*}
 
 где $X$ -- одна из метрик  в $\mathbb{R}^{m}$, например,
@@ -133,12 +133,128 @@ $L_{2}, L_{1}, L_{\infty}$.
 \begin{equation}
 \label{equation:gardner-kiderlen}
  ||\{(x_{i}, u_{i})\}_{i = 1}^{m} - h^{0}||_{X} \to \inf \;\;\; s. t. \;\;
- (x_{i}, u_{i}) \geq (x_{j}, u_{i}), 1 \leq i \neq j \leq m
+ (x_{i}, u_{i}) \geq (x_{j}, u_{i}), 1 \leq i \neq j \leq m,
 \end{equation}
 
 где $x_{i} \in \mathbb{R}^{3}$ --- точки касания тела с опорной плоскостью,
-имеющей нормаль $u_{i}$. В статье \cite{palachev} приводится метод, позволяющий
-уменьшить число ограничений в задаче \ref{equation:gardner-kiderlen}.
+имеющей нормаль $u_{i}$.
+
+
+\textbf{3. Согласованность теневых контуров.}
+Теневой контур $C$ выпуклого многогранника $K$ представляет из себя
+многоугольник с конечным числом сторон, расположенный в некоторой фиксированной
+плоскости $\pi$. Без ограничения общности можно считать, что плоскость контура
+всегда содержит начало координат $O$. В таком случае, если измерения тела
+производились абсолютно точно, и $C$ не содержит измерительной погрешности, то
+можно утверждать что
+
+\begin{equation*}
+ h_{K}(u) = h_{C}(u) \;\; \forall u \in \pi,
+\end{equation*}
+
+то есть что опорные функции тела $K$ и его теневого контура $C$ совпадают на
+большом круге сферы, образованном пересечением единичной сферы $||u||_{2} = 1$
+и плоскости $\pi$. Таким образом, теневой контур $C$ можно интерпретировать как
+непрерывное семейство измерений опорной функции тела $K$ на большом круге сферы.
+Следовательно, имеет смысл говорить о \textit{согласованности теневых контуров}:
+
+\begin{SmartDefinition}
+ Пусть $C_{1}, C_{2}, \ldots, C_{n}$ -- теневые контуры по направлениям
+ $\nu_{1}, \nu_{2}, \ldots, \nu_{n}$. Если существует такое выпуклое тело $K$,
+ теневые контуры которого по данным направлениям в точности совпадают с
+ $C_{1}, C_{2}, \ldots, C_{n}$, то данные теневые контуры называются
+ \textit{согласованными}.
+\end{SmartDefinition}
+
+Аналогично конечным наборам опорных чисел, можно рассматривать задачи
+согласования теневых контуров: с той лишь разницей, что целесообразным видится
+ограничить семейство всех непрерывных опорных функций на больших сферах с
+нормалями $\nu_{1}, \nu_{2}, \ldots, \nu_{n}$ более узким классом. Мы будем
+рассматривать только такие теневые контуры, которые являются многоугольниками,
+то есть априори будем предполагать, что исходное тело является многогранником
+с конечным числом вершин, рёбер и граней.
+
+Следующая теорема позволяет сводить задачу согласования теневых контуров к
+известной задаче согласования конечных наборов опорных чисел:
+
+\begin{SmartTheorem}
+ Пусть $C_{1}, C_{2}, \ldots, C_{n}$ -- теневые контуры,
+ $u^{i}_{j}$ -- нормаль к $j$-й стороне контура $C_{i}$, а $h^{i}_{j}$ --
+ опорное число контура $C_{i}$ по направлению $u^{i}_{j}$.
+ Тогда если опорные числа $\{h^{i}_{j}\}_{i, j}$ по направлениям
+ $\{u^{i}_{j}\}_{i, j}$ согласованы, то согласованы и теневые контуры
+ $C_{1}, C_{2}, \ldots, C_{n}$.
+\end{SmartTheorem}
+
+\textbf{Доказательство.}
+
+Поскольку опорные числа $\{h^{i}_{j}\}_{i, j}$ по направлениям
+$\{u^{i}_{j}\}_{i, j}$ согласованы, то пересечение
+всех полупространств $(x, u^{i}_{j}) \leq h^{i}_{j}$ является тем самым телом
+$K$, для которого $h_{K}(u^{i}_{j}) = h^{i}_{j}$.
+Для всех $i, j$ обозначим $x^{i}_{j}$ -- точку касания тела $K$ с плоскостью
+$(x, u^{i}_{j}) = h^{i}_{j}$.
+
+Тогда для выполнены условия
+
+\begin{equation*}
+ (x^{i}_{j}, u^{i}_{j}) \geq (x^{i'}_{j'}, u^{i}_{j}) \;\;
+ \forall i = 1, \ldots, n, \;
+ j = 1, \ldots, m_{i}, \;
+ i' = 1, \ldots, n, \;
+ j' = 1, \ldots, m_{i'}
+\end{equation*}
+
+Очевидно, что в качестве тоски касания по направлению $u^{i}_{j}$ можно
+выбирать любую точку, лежащую на стороне контура $C_{i}$, имеющей нормаль
+$u^{i}_{j}$. Для однозначности будем считать, что точки касания выбраны таким
+образом, что $x^{i}_{j}$ является первой вершиной стороны контура, которая
+встречается при его обходе по часовой стрелке.
+
+Пусть $u$ -- некоторое единичное направление, лежащее в плоскости контура
+$C_{i}$, а $x$ -- точка касания тела $K$ с плоскостью $(x, u) = h_{K}(u)$.
+Очевидно, что $x$ является одной из точек $x^{i}_{1}, \ldots, x^{i}_{m_{i}}$.
+Если вектор $u$ расположен между векторами $u^{i}_{j - 1}$ и $u^{i}_{j}$ в
+плоскости контура $C_{i}$, то можно утверждать что $x = x^{i}_{j}$. Поскольку
+$x^{i}_{j}$ лежит одновременно на $(j - 1)$-й и $j$-й сторонах контура, то
+$(x^{i}_{j}, u^{i}_{j - 1}) = (x^{i}_{j - 1}, u^{i}_{j - 1})$.
+
+Рассмотрим теперь некоторое другое единичное направление $u'$, лежащее в
+плоскости другого контура $C_{k}$, и соответствующую ему точку касания $x'$.
+
+Представим направление $u$ в виде линейной комбинации нормалей сторон контура
+$C_{i}$, между которыми оно лежит:
+
+\begin{equation*}
+ u = \alpha u^{i}_{j - 1} + \beta u^{i}_{j},
+\end{equation*}
+
+причём $\alpha > 0, \beta > 0$, поскольку направление $u$ лежит между
+$u^{i}_{j - 1}$ и $u^{i}_{j}$. Следовательно, справедлива следующая цепочка
+неравенств:
+
+\begin{align*}
+ (x', u) &= (x, \alpha u^{i}_{j - 1} + \beta u^{i}_{j}) = \\
+ = \alpha (x, u^{i}_{j - 1}) + \beta (x, u^{i}_{j}) &\leq
+ \alpha (x^{i}_{j - 1}, u^{i}_{j - 1}) + \beta (x^{i}_{j}, u^{i}_{j}) = \\
+ = \alpha (x^{i}_{j}, u^{i}_{j - 1}) + \beta (x^{i}_{j}, u^{i}_{j}) &=
+ (x^{i}_{j}, \alpha u^{i}_{j - 1} + \beta u^{i}_{j}) = (x^{i}_{j}, u) = (x, u)
+\end{align*}
+
+Таким образом, доказано, что для любых направлений $u, u'$, лежащих в каких-либо
+плоскостях (возможно, разных) теневых контуров $C_{1}, C_{2}, \ldots, C_{n}$,
+справедливо неравенство:
+
+\begin{equation*}
+ (x', u) \leq (x, u),
+\end{equation*}
+
+где $x, x'$ -- точки касания тела $K$ по направлениям $u, u'$. Данное условие
+в точности является критерием согласованности всякого набора опорных чисел, в
+том числе непрерывного, что и требовалось доказать.
+
+$\square$
+
 
 
 \begin{thebibliography}{50}
