[DOC] article2: added section about new algorithm
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -39,9 +39,9 @@
 \begin{abstract}
 Предложен новый алгоритм получения согласованного набора опорных чисел по
 измерениям опорной функции выпуклого тела, позволяющий получить решение за
-линейное время по числу измерений без использования линейного программирования.
-Доказано обоснование применимости теории опорных чисел к задаче согласования
-теневых контуров геометрических тел.
+линейно-логарифмическое время по числу измерений без использования линейного
+программирования. Доказано обоснование применимости теории опорных чисел к
+задаче согласования теневых контуров геометрических тел.
 \end{abstract}
 
 \textbf{Ключевые слова:} опорная функция, восстановление геометрических тел,
@@ -255,7 +255,150 @@ $u^{i}_{j - 1}$ и $u^{i}_{j}$. Следовательно, справедлив
 
 $\square$
 
+Приведённая выше теорема позволяет обосновать применение уже существующих
+разработанных методов согласования опорных чисел к задаче согласования теневых
+контуров. Далее будет предложен новый алгоритм согласования.
 
+
+\textbf{4. Быстрый алгоритм согласования.}
+
+Основной конструкцией работы \cite{palachev} является переформулировка исходной
+задачи согласования в двойственной постановке, т. е. путём отображения всех
+исходных данных задачи и отношений между ними  под действием преобразования
+двойственности. На этой конструкции был основан следующий результат:
+
+\begin{SmartTheorem}\label{theorem:exhaustive-conditions}
+Рассмотрим следующую систему ограничений:
+
+\begin{equation}
+\label{equation:all-constraints}
+ (x_{i}, u_{i}) \geq (x_{i}, u_{j}), \;\;\;
+ |(x_{i}, u_{i}) - h_{i}| \leq \varepsilon.
+\end{equation}
+
+Пусть система ограничений (\ref{equation:all-constraints}) разрешима
+для некоторого $\varepsilon^{0}$. Обозначим многогранник
+
+\begin{equation}
+\label{equation:upper-bounds-polyhedron}
+ K = \bigcap \limits_{i = 1}^{m}\{(x, u_{i}) \leq h_{i} + \varepsilon^{0}\}.
+\end{equation}
+
+Пусть $\delta$ - полярное преобразование двойственности.
+Тогда если отрезок, соединяющий точки
+$\delta(\{(x, u_{i}) = h_{i} - \varepsilon^{0}\})$ и
+$\delta(\{(x, u_{j}) = h_{j} - \varepsilon^{0}\})$, пересекает
+$\delta(K)$, то условия $(x_{i}, u_{i}) \geq (x_{j}, u_{i})$ и
+$(x_{j}, u_{j}) \geq (x_{i}, u_{j})$ избыточны в системе ограничений
+(\ref{equation:all-constraints}).
+\end{SmartTheorem}
+
+Рассмотрим задачу согласования опорных чисел в метрике $L_{\infty}$:
+
+\begin{equation}
+\label{equation:infinity-problem}
+ \varepsilon \to \inf \;\;\;
+ s. t. \;\; (x_{i}, u_{i}) \geq (x_{i}, u_{j}), \;\;\;
+ |(x_{i}, u_{i}) - h_{i}| \leq \varepsilon
+\end{equation}
+
+По сути, данная задача линейного программирования состоит в нахождении такого
+минимального $\varepsilon$, при котором система ограничений
+(\ref{equation:all-constraints}) является разрешимой, т. е. когда существует
+хотя бы один набор точек $(x_{1}, \ldots, x_{m})$, удовлетворяющий этой системе.
+К данной задаче можно подойти с несколько иной стороны, если для каждого
+фиксированного $\varepsilon$ выяснять, является ли система
+(\ref{equation:all-constraints}) разрешимой.
+
+\begin{SmartTheorem}
+ Система ограничений (\ref{equation:all-constraints}) разрешима тогда и только
+ тогда, когда ни одна из точек
+ $\delta(\{(x, u_{i}) = h_{i} - \varepsilon\})$ не лежит во внутренности
+ многогранника $\delta(K)$, где $K$ -- многогранник, определяемый соотношением
+ (\ref{equation:upper-bounds-polyhedron}).
+\end{SmartTheorem}
+
+\textbf{Доказательство.}
+
+Точка $\delta(\{(x, u_{i}) = h_{i} - \varepsilon\})$ не лежит во внутренности
+многогранника $\delta(K)$ тогда и только тогда, когда плоскость
+$\{(x, u_{i}) = h_{i} - \varepsilon\}$ пересекает многогранник $K$ (по
+одному из свойств преобразования двойственности). Это в свою очередь
+эквивалентно тому, что существует такая точка $x = x_{i}$, которая удовлетворяет
+следующим соотношениям:
+
+\begin{align*}
+ (x_{i}, u_{i}) & \geq h_{i} - \varepsilon \\
+ (x_{i}, u_{j}) & \leq h_{j} + \varepsilon, \; j = 1, \ldots, m.
+\end{align*}
+
+Без ограничения общности можно выбрать $x_{i}$ таким образом, что
+
+\begin{equation*}
+(x_{i}, u_{i}) = h_{i} + \varepsilon.
+\end{equation*}
+
+В таком случае, повторяя
+приведённые выше рассуждения для всех $i = 1, \ldots, m$, мы получим набор
+таких точек $(x_{1}, \ldots, x_{m})$, который будет удовлетворять системе
+ограничений (\ref{equation:all-constraints}).
+
+$\square$
+
+Полученный результат позволяет организовать процесс нахождения решения задачи
+линейного программирования \ref{equation:infinity-problem} с помощью
+следующего алгоритма:
+
+\begin{enumerate}
+ \item По исходным опорным данным $u_{i}, h_{i}, i = 1, \ldots, m$
+ построить тело $K^{0}$ как пересечение полупространств:
+ \begin{equation*}
+ \label{equation:naive-body}
+  K^{0} = \bigcap \limits_{i = 1}^{m} \{(u_{i}, x) \leq h_{i}\}
+ \end{equation*}
+ \item Пусть $A_{1}, \ldots A_{s}$ --- вершины тела $K^{0}$. Вычислить опорные
+ числа тела $K^{0}$ по направлениям $u_{i}, i = 1, \ldots, m$ следующим образом:
+ \begin{equation*}
+  h^{0}_{i} = \max \limits_{j = 1, \ldots, s} (u_{i}, A_{j})
+ \end{equation*}
+ \item Вычислить $L_{\infty}$-расстояние от полученных опорных чисел до
+ исходных:
+ \begin{equation*}
+  \varepsilon^{0} = \max \limits_{i = 1, \ldots, m} |h_{i} - h^{0}_{i}|
+ \end{equation*}
+ Положить $\varepsilon_{-} = 0, \;\; \varepsilon_{+} = \varepsilon_{0}$
+ \item Если $|\varepsilon_{+} - \varepsilon_{-}| < \Delta \varepsilon$, то
+ остановить алгоритм, в противном случае положить
+ $\varepsilon = \frac{\varepsilon_{-} + \varepsilon_{+}}{2}$ и перейти к
+ следующему шагу.
+ \item Вычислить точки
+ $\delta(\{(x, u_{i}) = h_{i} + \varepsilon\}), \; i = 1, \ldots, m$ и построить
+ их выпуклую оболочку $D$.
+ \item Вычислить точки
+ $\delta(\{(x, u_{i}) = h_{i} - \varepsilon\}), \; i = 1, \ldots, m$ и
+ проверить, лежит ли хотя бы одна из них во внутренности $D$. Если хотя бы одна
+ лежит, то изменить величину $\varepsilon_{-} = \varepsilon$, иначе изменить
+ величину $\varepsilon_{+} = \varepsilon$. Перейти к шагу 4.
+\end{enumerate}
+
+В пункте 4 величина $\Delta \varepsilon$ является фиксирована, т. е. является
+параметром алгоритма. определяющим точность вычисления минимального допустимого
+$\varepsilon$. Количество итераций, необходимое для завершения алгоритма,
+очевидно, равно $\log_{2} \frac{\varepsilon_{0}}{\Delta \varepsilon}$. На каждом
+шаге алгоритма требуется $2m$ раз вычислять двойственные образы плоскостей (за
+константное число операций), $1$ раз строить выпуклую оболочку $m$ точек
+(что требует $O(m \log m)$ времени) и $m$ раз проверять принадлежность точки
+построенному многограннику (что требует $O(\log m)$ времени). Следовательно,
+трудоёмкость работы алгоритма составляет
+
+\begin{equation*}
+ \log_{2} \frac{\varepsilon_{0}}{\Delta \varepsilon} \cdot O(m \log m).
+\end{equation*}
+
+Поскольку в реальных задачах величины $\varepsilon_{0}$ и
+$\Delta \varepsilon$ различаются не больше чем на несколько порядков, то
+можно считать, что представленный алгоритм имеет линейно-логарифмическую
+сложность.
 
 \begin{thebibliography}{50}
 
