[DOC] article2: added final section
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -171,8 +171,9 @@ $L_{2}, L_{1}, L_{\infty}$.
 ограничить семейство всех непрерывных опорных функций на больших сферах с
 нормалями $\nu_{1}, \nu_{2}, \ldots, \nu_{n}$ более узким классом. Мы будем
 рассматривать только такие теневые контуры, которые являются многоугольниками,
-то есть априори будем предполагать, что исходное тело является многогранником
-с конечным числом вершин, рёбер и граней.
+нормали сторон которых являются заранее известными и фискированы. Тем самым
+априори будем предполагать, что исходное тело является многогранником с конечным
+числом вершин, рёбер и граней.
 
 Следующая теорема позволяет сводить задачу согласования теневых контуров к
 известной задаче согласования конечных наборов опорных чисел:
@@ -205,7 +206,7 @@ $(x, u^{i}_{j}) = h^{i}_{j}$.
  j' = 1, \ldots, m_{i'}
 \end{equation*}
 
-Очевидно, что в качестве тоски касания по направлению $u^{i}_{j}$ можно
+Очевидно, что в качестве точки касания по направлению $u^{i}_{j}$ можно
 выбирать любую точку, лежащую на стороне контура $C_{i}$, имеющей нормаль
 $u^{i}_{j}$. Для однозначности будем считать, что точки касания выбраны таким
 образом, что $x^{i}_{j}$ является первой вершиной стороны контура, которая
@@ -400,6 +401,37 @@ $\Delta \varepsilon$ различаются не больше чем на нес
 можно считать, что представленный алгоритм имеет линейно-логарифмическую
 сложность.
 
+\textbf{5. Реализация и тестирование алгоритма}.
+Реализация была произведена на основе библиотеки алгоритмов вычислительной
+геометрии CGAL \cite{cgal}. Пересечение полупространств в пункте 1 и выпуклая
+оболочка в пункте 5 вычислялись на основе алгоритма построения трехмерной
+триангуляции Делоне. Выбор в пользу данного алгоритма был сделан, поскольку он
+позволяет производить быструю многократную проверку принадлежности точки к
+выпуклой оболочке.
+
+Тестирование было произведено на опорных числах, полученных из реальных
+теневых контуров. В метрике $L_{\infty}$ алгоритм работает приблизительно в 300
+раз быстрее, чем существующий алгоритм решения задачи линейного программирования
+на основе метода внутренней точки. К примеру, решение задачи на 200 теневых
+контурах, из которых были получены 2912 опорные точек, было получено за 0,98
+секунды, в то время как предыдущий алгоритм позволял получить решение лишь за
+299,59 секунд.
+
+Поскольку на практике наиболее значимым является решение задачи именно в
+$L_{2}$-метрике, существующие методы решение задачи остаются востребованными.
+Впрочем, решение в $L_{\infty}$ метрике можно использовать в качестве начального
+приближения в итерационном процессе решения задачи квадратичного
+программирования.
+
+Представляется также перспективной попытка разработать на основе представленного
+выше метода новый метод решения задачи в метриках $L_{1}$ и $L_{2}$ путём
+последовательного нахождения тех опорных чисел, для которых нарушение
+разрешимости системы ограничений (\ref{equation:all-constraints}) при
+непрерывном уменьшении $\varepsilon$ наступает раньше всех остальных. Такие
+точки, как кажется, является сообразным представить в виде линейной
+комбинации соседних опорных чисел.
+
+
 \begin{thebibliography}{50}
 
 \bibitem{palachev}
@@ -456,6 +488,10 @@ IEEE Transactions on Pattern Analysis and Machine Intelligence.
 \textbf{31},
 N 3.
 556--562.
+
+\bibitem{cgal}
+\textsc{Cgal}, {C}omputational {G}eometry {A}lgorithms {L}ibrary.
+\url{http://www.cgal.org}
 
 \end{thebibliography}
 
