[DOC] article2: remove section about consistency
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -40,8 +40,8 @@
 Предложен новый алгоритм получения согласованного набора опорных чисел по
 измерениям опорной функции выпуклого тела, позволяющий получить решение за
 линейно-логарифмическое время по числу измерений без использования линейного
-программирования. Доказано обоснование применимости теории опорных чисел к
-задаче согласования теневых контуров геометрических тел.
+программирования. Приведены детали реализации алгоритма и результаты его
+тестирования.
 \end{abstract}
 
 \textbf{Ключевые слова:} опорная функция, восстановление геометрических тел,
@@ -59,15 +59,8 @@
 описанной выше задаче методы восстановления геометрических тел по измерениям их
 опорных функций. Основная идея состоит в том, что всякий теневой контур является
 непрерывным семейством измерений опорной функции тела на большом круге сферы.
-Тем не менее, в данной статье не было обосновано, почему можно переходить от
-непрерывного семейства опорных чисел к конечному набору: из всех опорных чисел
-выбирался только конечный набор, который и подвергался затем процедуре
-согласования.
-
-Настоящая работа призвана восполнить этот недостаток: далее будет приведено
-доказательство эквивалентности сильной и слабой согласованности теневых
-контуров, которое служит обоснованием для применимости метода к рассматриваемой
-практической задаче.
+Из всех опорных чисел выбирался только конечный набор, который и подвергался
+затем процедуре согласования.
 
 Следующим вопросом, который здесь будет рассмотрен, является метод быстрого
 согласования опорных чисел, с помощью которого можно задачу в метрике
@@ -140,129 +133,7 @@ $L_{2}, L_{1}, L_{\infty}$.
 имеющей нормаль $u_{i}$.
 
 
-\textbf{3. Согласованность теневых контуров.}
-Теневой контур $C$ выпуклого многогранника $K$ представляет из себя
-многоугольник с конечным числом сторон, расположенный в некоторой фиксированной
-плоскости $\pi$. Без ограничения общности можно считать, что плоскость контура
-всегда содержит начало координат $O$. В таком случае, если измерения тела
-производились абсолютно точно, и $C$ не содержит измерительной погрешности, то
-можно утверждать что
-
-\begin{equation*}
- h_{K}(u) = h_{C}(u) \;\; \forall u \in \pi,
-\end{equation*}
-
-то есть что опорные функции тела $K$ и его теневого контура $C$ совпадают на
-большом круге сферы, образованном пересечением единичной сферы $||u||_{2} = 1$
-и плоскости $\pi$. Таким образом, теневой контур $C$ можно интерпретировать как
-непрерывное семейство измерений опорной функции тела $K$ на большом круге сферы.
-Следовательно, имеет смысл говорить о \textit{согласованности теневых контуров}:
-
-\begin{SmartDefinition}
- Пусть $C_{1}, C_{2}, \ldots, C_{n}$ -- теневые контуры по направлениям
- $\nu_{1}, \nu_{2}, \ldots, \nu_{n}$. Если существует такое выпуклое тело $K$,
- теневые контуры которого по данным направлениям в точности совпадают с
- $C_{1}, C_{2}, \ldots, C_{n}$, то данные теневые контуры называются
- \textit{согласованными}.
-\end{SmartDefinition}
-
-Аналогично конечным наборам опорных чисел, можно рассматривать задачи
-согласования теневых контуров: с той лишь разницей, что целесообразным видится
-ограничить семейство всех непрерывных опорных функций на больших сферах с
-нормалями $\nu_{1}, \nu_{2}, \ldots, \nu_{n}$ более узким классом. Мы будем
-рассматривать только такие теневые контуры, которые являются многоугольниками,
-нормали сторон которых являются заранее известными и фискированы. Тем самым
-априори будем предполагать, что исходное тело является многогранником с конечным
-числом вершин, рёбер и граней.
-
-Следующая теорема позволяет сводить задачу согласования теневых контуров к
-известной задаче согласования конечных наборов опорных чисел:
-
-\begin{SmartTheorem}
- Пусть $C_{1}, C_{2}, \ldots, C_{n}$ -- теневые контуры,
- $u^{i}_{j}$ -- нормаль к $j$-й стороне контура $C_{i}$, а $h^{i}_{j}$ --
- опорное число контура $C_{i}$ по направлению $u^{i}_{j}$.
- Тогда если опорные числа $\{h^{i}_{j}\}_{i, j}$ по направлениям
- $\{u^{i}_{j}\}_{i, j}$ согласованы, то согласованы и теневые контуры
- $C_{1}, C_{2}, \ldots, C_{n}$.
-\end{SmartTheorem}
-
-\textbf{Доказательство.}
-
-Поскольку опорные числа $\{h^{i}_{j}\}_{i, j}$ по направлениям
-$\{u^{i}_{j}\}_{i, j}$ согласованы, то пересечение
-всех полупространств $(x, u^{i}_{j}) \leq h^{i}_{j}$ является тем самым телом
-$K$, для которого $h_{K}(u^{i}_{j}) = h^{i}_{j}$.
-Для всех $i, j$ обозначим $x^{i}_{j}$ -- точку касания тела $K$ с плоскостью
-$(x, u^{i}_{j}) = h^{i}_{j}$.
-
-Тогда для выполнены условия
-
-\begin{equation*}
- (x^{i}_{j}, u^{i}_{j}) \geq (x^{i'}_{j'}, u^{i}_{j}) \;\;
- \forall i = 1, \ldots, n, \;
- j = 1, \ldots, m_{i}, \;
- i' = 1, \ldots, n, \;
- j' = 1, \ldots, m_{i'}
-\end{equation*}
-
-Очевидно, что в качестве точки касания по направлению $u^{i}_{j}$ можно
-выбирать любую точку, лежащую на стороне контура $C_{i}$, имеющей нормаль
-$u^{i}_{j}$. Для однозначности будем считать, что точки касания выбраны таким
-образом, что $x^{i}_{j}$ является первой вершиной стороны контура, которая
-встречается при его обходе по часовой стрелке.
-
-Пусть $u$ -- некоторое единичное направление, лежащее в плоскости контура
-$C_{i}$, а $x$ -- точка касания тела $K$ с плоскостью $(x, u) = h_{K}(u)$.
-Очевидно, что $x$ является одной из точек $x^{i}_{1}, \ldots, x^{i}_{m_{i}}$.
-Если вектор $u$ расположен между векторами $u^{i}_{j - 1}$ и $u^{i}_{j}$ в
-плоскости контура $C_{i}$, то можно утверждать что $x = x^{i}_{j}$. Поскольку
-$x^{i}_{j}$ лежит одновременно на $(j - 1)$-й и $j$-й сторонах контура, то
-$(x^{i}_{j}, u^{i}_{j - 1}) = (x^{i}_{j - 1}, u^{i}_{j - 1})$.
-
-Рассмотрим теперь некоторое другое единичное направление $u'$, лежащее в
-плоскости другого контура $C_{k}$, и соответствующую ему точку касания $x'$.
-
-Представим направление $u$ в виде линейной комбинации нормалей сторон контура
-$C_{i}$, между которыми оно лежит:
-
-\begin{equation*}
- u = \alpha u^{i}_{j - 1} + \beta u^{i}_{j},
-\end{equation*}
-
-причём $\alpha > 0, \beta > 0$, поскольку направление $u$ лежит между
-$u^{i}_{j - 1}$ и $u^{i}_{j}$. Следовательно, справедлива следующая цепочка
-неравенств:
-
-\begin{align*}
- (x', u) &= (x, \alpha u^{i}_{j - 1} + \beta u^{i}_{j}) = \\
- = \alpha (x, u^{i}_{j - 1}) + \beta (x, u^{i}_{j}) &\leq
- \alpha (x^{i}_{j - 1}, u^{i}_{j - 1}) + \beta (x^{i}_{j}, u^{i}_{j}) = \\
- = \alpha (x^{i}_{j}, u^{i}_{j - 1}) + \beta (x^{i}_{j}, u^{i}_{j}) &=
- (x^{i}_{j}, \alpha u^{i}_{j - 1} + \beta u^{i}_{j}) = (x^{i}_{j}, u) = (x, u)
-\end{align*}
-
-Таким образом, доказано, что для любых направлений $u, u'$, лежащих в каких-либо
-плоскостях (возможно, разных) теневых контуров $C_{1}, C_{2}, \ldots, C_{n}$,
-справедливо неравенство:
-
-\begin{equation*}
- (x', u) \leq (x, u),
-\end{equation*}
-
-где $x, x'$ -- точки касания тела $K$ по направлениям $u, u'$. Данное условие
-в точности является критерием согласованности всякого набора опорных чисел, в
-том числе непрерывного, что и требовалось доказать.
-
-$\square$
-
-Приведённая выше теорема позволяет обосновать применение уже существующих
-разработанных методов согласования опорных чисел к задаче согласования теневых
-контуров. Далее будет предложен новый алгоритм согласования.
-
-
-\textbf{4. Быстрый алгоритм согласования.}
-
+\textbf{3. Быстрый алгоритм согласования.}
 Основной конструкцией работы \cite{palachev} является переформулировка исходной
 задачи согласования в двойственной постановке, т. е. путём отображения всех
 исходных данных задачи и отношений между ними  под действием преобразования
@@ -401,7 +272,7 @@ $\Delta \varepsilon$ различаются не больше чем на нес
 можно считать, что представленный алгоритм имеет линейно-логарифмическую
 сложность.
 
-\textbf{5. Реализация и тестирование алгоритма}.
+\textbf{4. Реализация и тестирование алгоритма}.
 Реализация была произведена на основе библиотеки алгоритмов вычислительной
 геометрии CGAL \cite{cgal}. Пересечение полупространств в пункте 1 и выпуклая
 оболочка в пункте 5 вычислялись на основе алгоритма построения трехмерной
