[DOC] article2: add some new notes
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -272,7 +272,27 @@ $\Delta \varepsilon$ различаются не больше чем на нес
 можно считать, что представленный алгоритм имеет линейно-логарифмическую
 сложность.
 
-\textbf{4. Реализация и тестирование алгоритма}.
+\textbf{4. Алгоритм для $L_{2}$-метрики.}
+Представленный выше метод разработан для применения в случае
+$L_{\infty}$-метрики. Ниже будет представлен метод, позволяющий получать
+приближённое решение задачи в случае $L_{2}$-метрики. Опишем основные идеи, на
+которых основывается предлагаемый алгоритм, а затем представим его формальное
+описание.
+
+Пусть $u_{1}, \ldots, u_{m}$ -- опорные
+направления, $h_{1}, \ldots, h_{m}$ -- опорные числа. Построим пересечение
+опорных полупространств
+$K = \bigcap \limits_{i = 1}^{m}\{(u_{i}, x) \leq h_{i}\}$.
+Пусть $I \subseteq \{1, \ldots, m\}$ -- подмножество тех индексов,
+которые соответствуют тем опорным плоскостям $\{(u_{i}, x) = h_{i}\}$,
+пересечение которых с многогранником $K$ непусто. Очевидно, что опорные
+плоскости с индексами $i \in I$ суть максимальное подмножество согласованных
+опорных плоскостей. Несогласованность всего набора опорных плоскостей
+проистекает из того факта, что плоскости с индексами $i \notin I$ не пересекают
+результирующий многогранник $K$. Идея, на которой основывается алгоритм,
+состоит из 
+
+\textbf{5. Реализация и тестирование алгоритма}.
 Реализация была произведена на основе библиотеки алгоритмов вычислительной
 геометрии CGAL \cite{cgal}. Пересечение полупространств в пункте 1 и выпуклая
 оболочка в пункте 5 вычислялись на основе алгоритма построения трехмерной
@@ -287,20 +307,6 @@ $\Delta \varepsilon$ различаются не больше чем на нес
 контурах, из которых были получены 2912 опорные точек, было получено за 0,98
 секунды, в то время как предыдущий алгоритм позволял получить решение лишь за
 299,59 секунд.
-
-Поскольку на практике наиболее значимым является решение задачи именно в
-$L_{2}$-метрике, существующие методы решение задачи остаются востребованными.
-Впрочем, решение в $L_{\infty}$ метрике можно использовать в качестве начального
-приближения в итерационном процессе решения задачи квадратичного
-программирования.
-
-Представляется также перспективной попытка разработать на основе представленного
-выше метода новый метод решения задачи в метриках $L_{1}$ и $L_{2}$ путём
-последовательного нахождения тех опорных чисел, для которых нарушение
-разрешимости системы ограничений (\ref{equation:all-constraints}) при
-непрерывном уменьшении $\varepsilon$ наступает раньше всех остальных. Такие
-точки, как кажется, является сообразным представить в виде линейной
-комбинации соседних опорных чисел.
 
 
 \begin{thebibliography}{50}
