--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -6,8 +6,14 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 \usepackage{graphicx}
-\usepackage{wrapfig}
+%\usepackage{wrapfig}
 \usepackage{amsmath,amssymb}
+
+\usepackage{geometry}
+\geometry{left=4cm}
+\geometry{right=4cm}
+\geometry{top=4cm}
+\geometry{bottom=4cm}
 
 % Package that enables usage of theorems and definition designed in a 
 % standard way.
@@ -40,7 +46,7 @@ $L_{\infty}$}
 \begin{abstract}
 Предложен новый алгоритм решения задачи согласования измерений опорной функции
 выпуклого тела в метрике $L_{\infty}$, позволяющий получить решение за
-линейно-логарифмическое время по числу измерений без использования линейного
+квадратичное время по числу измерений без использования линейного
 программирования. Приведены детали реализации алгоритма и результаты его
 тестирования.
 \end{abstract}
@@ -63,8 +69,11 @@ $L_{\infty}$}
  называется
  $h_{K}: \mathbb{R}^{n} \to \mathbb{R}_{+}$:
 
- \begin{equation*}h_{K}(u) = \sup \limits_{x \in K}(x, u).\end{equation*}
+ \begin{equation*}h_{K}(u) = \sup \limits_{x \in K}(x, u),\end{equation*}
 \end{SmartDefinition}
+где $u$ -- произвольный вектор в $\mathbb{R}^n$,
+$(x, u)$ -- евклидово скалярное произведение этого вектора на некоторую точку
+$x \in K$.
 
 В перечисленных выше работах рассматривается следующая задача. Пусть
 имеется некоторое реальное физическое тело $K$ и производятся эмпирические
@@ -117,16 +126,23 @@ $L_{2}, L_{1}, L_{\infty}$),
 Основным результатом работы \cite{palachev} является следующая теорема:
 
 \begin{SmartTheorem}\label{theorem:exhaustive-conditions}
-Рассмотрим следующую систему ограничений:
+Рассмотрим следующую систему ограничений относительно переменных точек
+$x_i \in \mathbb{R}^{3}, i = 1, \ldots, n$ и переменного вещественного числа
+$\varepsilon > 0$:
 
 \begin{equation}
 \label{equation:all-constraints}
  (x_{i}, u_{i}) \geq (x_{i}, u_{j}), \;\;\;
- |(x_{i}, u_{i}) - h_{i}| \leq \varepsilon.
+ |(x_{i}, u_{i}) - h_{i}| \leq \varepsilon,
 \end{equation}
 
+где $u_i, i = 1, \ldots, n$ -- набор фикисрованных опорных направлений,
+нормированных в евклидовой метрике (т.е. $||u_i||_{2} = 1, i = 1, \ldots, n$),
+$h_i, i = 1 , \ldots, n$ -- набор соответствующих им фиксированных опорных
+чисел.
+
 Пусть система ограничений (\ref{equation:all-constraints}) разрешима
-для некоторого $\varepsilon^{0}$. Обозначим многогранник
+для некоторого $\varepsilon^{0}$. Введем многогранник $K$ по следующей формуле:
 
 \begin{equation}
 \label{equation:upper-bounds-polyhedron}
@@ -209,7 +225,7 @@ $\square$
  следующему шагу.
  \item Вычислить точки
  $\delta(\{(x, u_{i}) = h_{i} + \varepsilon\}), \; i = 1, \ldots, m$ и построить
- их выпуклую оболочку $D$.
+ их динамическую выпуклую оболочку $D$.
  \item Вычислить точки
  $\delta(\{(x, u_{i}) = h_{i} - \varepsilon\}), \; i = 1, \ldots, m$ и
  проверить, лежит ли хотя бы одна из них во внутренности $D$. Если хотя бы одна
@@ -222,36 +238,43 @@ $\square$
 $\varepsilon$. Количество итераций, необходимое для завершения алгоритма,
 очевидно, равно $\log_{2} \frac{\varepsilon_{0}}{\Delta \varepsilon}$. На каждом
 шаге алгоритма требуется $2m$ раз вычислять двойственные образы плоскостей (за
-константное число операций), $1$ раз строить выпуклую оболочку $m$ точек
-(что требует $O(m \log m)$ времени) и $m$ раз проверять принадлежность точки
-построенному многограннику (что требует $O(\log m)$ времени). Следовательно,
-трудоёмкость работы алгоритма составляет
+константное число операций), $1$ раз строить динамическую выпуклую оболочку
+$m$ точек (что требует $O(m^2)$ времени при использовании алгоритма
+построения трехмерной триангуляции Делоне \cite{Devillers}) и $m$ раз проверять
+принадлежность точки построенному многограннику (что требует $O(\log m)$
+времени для каждой из $m$ точек по отдельности \cite{Devillers}).
+Следовательно, трудоёмкость работы алгоритма составляет
 
 \begin{equation*}
- \log_{2} \frac{\varepsilon_{0}}{\Delta \varepsilon} \cdot O(m \log m).
+ \log_{2} \frac{\varepsilon_{0}}{\Delta \varepsilon} \cdot O(m^2).
 \end{equation*}
 
 Поскольку в реальных задачах величины $\varepsilon_{0}$ и
 $\Delta \varepsilon$ различаются не больше чем на несколько порядков, то
-можно считать, что представленный алгоритм имеет линейно-логарифмическую
-сложность.
+можно считать, что представленный алгоритм имеет квадратичную сложность.
+
+Также представляется целесообразным проверить гипотезу, что при соблюдении
+разумного предположения о равномерной распределенности опорных направлений
+$u_i, i = 1, \ldots, n$ на сфере возможно построение триангуляции Делоне
+за линейное время \cite{Attali}, что позволило бы говорить о
+линейно-логарифмической сложности алгоритма.
 
 \textbf{3. Реализация и тестирование алгоритма}.
 Алгоритм был реализован на основе библиотеки алгоритмов вычислительной
 геометрии CGAL \cite{cgal}. Пересечение полупространств в пункте 1 и выпуклая
 оболочка в пункте 5 вычислялись на основе алгоритма построения трехмерной
-триангуляции Делоне. Выбор в пользу данного алгоритма был сделан поскольку он
-позволяет производить быструю многократную проверку принадлежности точки к
-выпуклой оболочке.
+триангуляции Делоне \cite{Devillers}. Выбор в пользу данного алгоритма был
+сделан поскольку он позволяет производить быструю многократную проверку
+принадлежности точки к выпуклой оболочке \cite{Devillers}.
 
-Тестирование было произведено на опорных числах, полученных из реальных
-теневых контуров. В метрике $L_{\infty}$ алгоритм работает приблизительно в 300
+Тестирование было произведено на опорных числах, полученных эмпирическим путем
+на основе измерений реального выпуклого тела (драгоценного камня).
+В метрике $L_{\infty}$ алгоритм работает приблизительно в 300
 раз быстрее, чем существующий алгоритм решения задачи линейного программирования
-на основе метода внутренней точки. К примеру, решение задачи на 200 теневых
-контурах, из которых были получены 2912 опорных точек, было получено за 0,98
-секунды, в то время как предыдущий алгоритм позволял получить решение лишь за
-300 секунд \cite{palachev}.
-
+на основе метода внутренней точки \cite{Ipopt}. К примеру, решение задачи на
+2912 опорных числах было получено за 0,98 секунды, в то время как
+предыдущий алгоритм позволял получить решение лишь за 300 секунд \cite{palachev}
+(на одних и тех же вычислительных ресурсах).
 
 \begin{thebibliography}{50}
 
@@ -310,9 +333,36 @@ IEEE Transactions on Pattern Analysis and Machine Intelligence.
 N 3.
 556--562.
 
+\bibitem{Devillers}
+\emph{Devillers~O.}
+The Delaunay Hierarchy //
+International Journal of Foundations of Computer Science,
+World Scientific Publishing.
+2002.
+\textbf{13}.
+163--180.
+
+\bibitem{Attali}
+\emph{Attali~D., Boissonnat~J.-D.}
+A linear bound on the complexity of the Delaunay triangulation of points on
+polyhedral surfaces //
+Proceedings of the Seventh ACM Symposium on Solid Modeling and Applications.
+2002.
+139--146.
+
 \bibitem{cgal}
 \textsc{Cgal}, {C}omputational {G}eometry {A}lgorithms {L}ibrary.
 \url{http://www.cgal.org}
+
+\bibitem{Ipopt}
+\emph{Wachter~A., Biegler~L.T.}
+On the implementation of a primal-dual interior point filter line search
+algorithm for large-scale nonlinear programming.
+Mathematical Programming.
+2006.
+\textbf{106}.
+N 1.
+25--57
 
 \end{thebibliography}
 
