[DOC] article2: Added my feedback to reviewer (initial version)
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -276,6 +276,32 @@ $u_i, i = 1, \ldots, n$ на сфере возможно построение т
 предыдущий алгоритм позволял получить решение лишь за 300 секунд \cite{palachev}
 (на одних и тех же вычислительных ресурсах).
 
+Безусловно, одно лишь тестирование алгоритма не позволяет судить о превосходстве
+или недостатке предлагаемого метода по отношению к предыдущему. Тем не менее,
+определенные выводы возможно сделать на основе теоретической оценки скорости
+работы предыдущего алгоритма. По теореме 4.7 статьи \cite{WachterBiegler},
+фильтрационный метод внутренней точки с линейным поиском, при выполнении ряда
+условий, сходится сверхлинейно к минимуму задачи
+(\ref{equation:infinity-problem}). Поскольку задача
+(\ref{equation:infinity-problem}) содержит квадратичное число ограничений
+(см. \cite{GardnerKiderlen,palachev}), на каждом шаге метода выполняются
+вычисления общей трудоёмкостью не менее $O(m^2)$ -- т.е. такой же, какую дает
+предлагаемый метод. Между тем, на практике оказалось, что по меньшей мере одно
+условие теоремы 4.7 из \cite{WachterBiegler} не выполняется в практических
+примерах задачи (\ref{equation:infinity-problem}), а именно то,
+что алгоритм не должен входить в фазу восстановления (когда производится
+минимизация суммарного отклонения ограничений). На примере, рассмотренном в
+\cite{palachev}, алгоритм внутренней точки входит в фазу восстановления.
+Следовательно, в данном случае мы имеем лишь сходимость, гарантируемую теоремой
+2 статьи \cite{WachterBiegler2}, из которой о скорости сходимости ничего не
+известно.
+
+Таким образом, предлагающийся метод, позволяющий за квадратичное время
+гарантированно получить решение задачи (\ref{equation:infinity-problem}),
+имеет право на существование, по сравнению с методом внутренней точки, про
+скорость сходимости которого применительно к задаче
+(\ref{equation:infinity-problem}) содержательных оценок пока не имеется.
+
 \begin{thebibliography}{50}
 
 \bibitem{PrinceWillsky}
@@ -364,6 +390,24 @@ Mathematical Programming.
 N 1.
 25--57
 
+\bibitem{WachterBiegler}
+\emph{Wachter~A., and Biegler.~L.T.}
+Line search filter methods for nonlinear programming: Local convergence.
+SIAM Journal on Optimization.
+2005.
+\textbf{16}.
+N 1.
+32--48
+
+\bibitem{WachterBiegler2}
+\emph{Wachter~A., and Biegler.~L.T.}
+Line search filter methods for nonlinear programming: Motivation and global
+convergence.
+SIAM Journal on Optimization.
+2005.
+\textbf{16}.
+N 1.
+1--31
 \end{thebibliography}
 
 \end{document}
